# chats

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
capabilities/: migrated.json
src/: cmds.rs  lib.rs  main.rs  sqlsocket.rs
ui/: chatsession.css  chatsession.html  chatsession.js  imgdisplay.css  imgdisplay.html  imgdisplay.js  index.css  index.html  index.js  leftuser.css  leftuser.html  leftuser.js  share.css  splashscreen.css  splashscreen.html  splashscreen.js  wcperson.css  wcperson.js
