[package]
name = 'chats'
version = '0.0.0'
edition = '2021'

[build-dependencies]
tauri-build = { version = "^1", features = [] }

[dependencies]
tauri = { version = "*", features = ["dialog-message", "dialog-open", "dialog-save", "fs-read-file", "notification-all", "path-all", "system-tray", "window-close", "window-create", "window-hide", "window-show"] }
serde = "*"
serde_json = "*"
rust-ini = "*"
sqlite = "*"
uuid = "*"
chrono = "*"

[source.crates-io]
replace-with = 'ustc'

[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"

[features]
custom-protocol = ["tauri/custom-protocol"]
