[package]
name = 'chats'
version = '0.0.0'
edition = '2021'

[build-dependencies]
tauri-build = { version = "^1", features = [] }

[dependencies]
tauri = { version = "*", features = [ "window-hide", "window-close", "window-show", "window-create", "notification-all", "path-all", "dialog-message", "fs-read-file", "dialog-save", "dialog-open", "system-tray"] }
serde = "*"
serde_json = "*"
rust-ini = "*"
sqlite = "*"
uuid = "*"
chrono = "*"
log = "*"
log4rs = "*"

[source.crates-io]
replace-with = 'ustc'

[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = 'abort'
