[package]
name = 'chats'
version = '0.0.0'
edition = '2021'

[build-dependencies]
tauri-build = { version = "*", features = [] }

[dependencies]
tauri = { version = "*", features = ["tray-icon"] }
serde = "*"
serde_json = "*"
rust-ini = "*"
sqlite = "*"
uuid = "*"
chrono = "*"
log = "*"
log4rs = "*"
tauri-plugin-fs = "*"
tauri-plugin-dialog = "*"
tauri-plugin-notification = "*"

[source.crates-io]
replace-with = 'ustc'

[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = 'abort'
